--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -19,5 +19,5 @@ jobs:
             echo "I will fail"
             exit 1
         - name: Say Goodbye
-          run: echo "Goodbye!"
+          run: echo "Goodbye!!"
 
