Update Code for folder structure print statement

--- a/.github/workflows/04-using-actions.yml
+++ b/.github/workflows/04-using-actions.yml
@@ -14,7 +14,8 @@ jobs:
           run: |
             ls -la
             pwd
-            
+            ls -la 04-using-actions || true
+
 
         - name: Setup Node.js Environment
           uses: actions/setup-node@v3
