Update Code for working directory

--- a/.github/workflows/04-using-actions.yml
+++ b/.github/workflows/04-using-actions.yml
@@ -24,4 +24,4 @@ jobs:
 
         - name: Install Dependencies
           run: npm ci
-          working-directory: react-app
+          working-directory: github_actions/react-app
