--- a/.github/workflows/04-using-actions.yml
+++ b/.github/workflows/04-using-actions.yml
@@ -6,6 +6,9 @@ on:
 jobs:
     use-actions:
       runs-on: ubuntu-latest
+      defaults:
+        run: 
+         working-directory: 04-using-actions/react-app
       steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
@@ -24,4 +27,6 @@ jobs:
 
         - name: Install Dependencies
           run: npm ci
-          working-directory: 04-using-actions/react-app
+          
+        - name: Run Tests
+          run: npm test
