Update Code for actions

--- a/.github/workflows/04-using-actions.yml
+++ b/.github/workflows/04-using-actions.yml
@@ -17,7 +17,7 @@ jobs:
           run: |
             ls -la
             pwd
-            ls -la 04-using-actions/react-app
+#            ls -la 04-using-actions/react-app
 
 
         - name: Setup Node.js Environment
