--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,8 +1,13 @@
 name: 06-Contexts
+run-name: 06 - Contexts | Debug - ${{ inputs.debug }}
 
 on:
   push:
   workflow_dispatch:
+    inputs:
+      debug:
+        type: boolean
+        default: false
 
 jobs:
   echo-data:                 # <- job id (required)
