Update the code for expressions2 for master from main

--- a/.github/workflows/07-expression2.yaml
+++ b/.github/workflows/07-expression2.yaml
@@ -22,7 +22,7 @@ jobs:
           echo "Runner OS: ${{ runner.os }}"
 
       - name: "[debug] print when triggered from main"
-        if: github.event_name == 'workflow_dispatch' && inputs.debug && github.ref == 'refs/heads/main'
+        if: github.event_name == 'workflow_dispatch' && inputs.debug && github.ref == 'refs/heads/master'
         run: |
           echo "I was triggered from the main branch."
 
