Update the code for variable1

--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -15,9 +15,10 @@ jobs:
       - name: Print env variables
         env:
           STEP_VAR: "I am a step env variable"
-          step_var2": "I am another step env variable"
+          step_var2: "I am another step env variable"
         run: |
           echo "Step env var: $STEP_VAR"
+          echo "Step env var1: ${{ env.STEP_VAR }}"
           echo "Step env var2: $step_var2"
           echo "Job env var: $JOB_VAR"
           echo "Workflow env var: $WORKFLOW_VAR"
