--- a/.github/workflows/09 - functions.yaml
+++ b/.github/workflows/09 - functions.yaml
@@ -12,18 +12,14 @@ jobs:
             exit 1
 
         - name: I will be skipped
-          run: |
-            if: ${{ success() }}
-            echo "I will print if previous steps succeed"
+          if: ${{ success() }}
+          run : echo "I will print if previous steps succeed"
         - name: Test endsWith function
-          run: |
-            if: ${{ failure() }}
-            echo "I will print if previous steps fail
+          if: ${{ failure() }}
+          run: echo "I will print if previous steps fail
         - name: I will execute always
-          run: |
-            if: ${{ !cancelled() }}
-            echo "I will always print except when the workflow is cancelled"
+          if: ${{ !cancelled() }}
+          run:  echo "I will always print except when the workflow is cancelled"
         - name: I will execute when cancelled
-          run: |
-            if: ${{ cancelled() }}
-            echo "I will always print except when the workflow is cancelled"
+          if: ${{ cancelled() }}
+          run:  echo "I will always print except when the workflow is cancelled"
