--- a/.github/workflows/09 - functions.yaml
+++ b/.github/workflows/09 - functions.yaml
@@ -10,7 +10,9 @@ jobs:
           run: |
             echo "This step will fail to demonstrate the use of functions."
             exit 1
-
+          
+        - name: Sleep for 20 seconds
+          run: sleep 20    
         - name: I will be skipped
           if: ${{ success() }}
           run : echo "I will print if previous steps succeed"
