--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -17,6 +17,7 @@ jobs:
 
     unit-tests:
       runs-on: ubuntu-latest
+      continue-on-error: true
       steps:
         - name: Running Unit Tests
           run: |
