--- a/.github/workflows/11-inputs.yaml
+++ b/.github/workflows/11-inputs.yaml
@@ -40,6 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !inputs.dry-run }}
     environment: ${{ inputs.target}}
+    needs: build
     steps:
       - name: Deploy
         if: ${{ success() }}
