--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: 14-artifacts/react-app
+        working-directory: 14-artifacts/react-demo
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,8 +33,8 @@ jobs:
         uses: actions/cache@v3
         id: cache
         with:
-          path: 14-artifacts/react-app/node_modules
-          key: deps-node-modules-${{ hashFiles('14-artifacts/react-app/package-lock.json') }}
+          path: 14-artifacts/react-demo/node_modules
+          key: deps-node-modules-${{ hashFiles('14-artifacts/react-demo/package-lock.json') }}
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app
-          path: 14-artifacts/react-app/build
+          path: 14-artifacts/react-demo/build
   deploy:
     runs-on: ubuntu-latest
     needs: test-build
@@ -55,7 +55,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app
-          path: 14-artifacts/react-app/build
+          path: 14-artifacts/react-demo/build
       - name: Show folder structure
         run: |
           ls -R
